<resources>
    <string name="app_name">Easy Meal</string>

    <!--  Toasts -->
    <string name="not_ready">Sorry, not ready yet :\'(</string>

    <string name="Type_filters">Select type</string>
    <!-- Toast - Select ingredients Fragment -->
    <string name="already_exist">Already in the list :)</string>
    <string name="add_one">You must add at least one item</string>
    <string name="contain_number">The ingredient can not contain numbers</string>
    <string name="contain_metacharacter">The ingredient can not contain metacharacter</string>
    <string name="empty_ingredient">Can not add an empty ingredient :(</string>

    <!---->


    <!-- Menu -->
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="home_screen">Home Screen</string>
    <string name="select_ingredients">Select Ingredients</string>
    <string name="help">Help</string>
    <string name="tutorial">Tutorial</string>
    <string name="last_viewed">Last Viewed</string>
    <string name="about">About</string>
    <!---->


    <!--Select ingredients Fragment -->
    <string name="ingredients">Ingredients</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <!---->

    <!-- Select filters Fragment-->
    <string name="filters">Select filters</string>
    <!---->
    <string name="title_activity_splash_screen">SplashScreen</string>
    <!-- List recipe Fragment -->
    <string name="result">Result</string>
    <string name="no_recipe_result">Ops! we couldn\'t find any recipe with these options, please verify if all your ingredients exist :(</string>
    <string name="wait">Wait .....  :)</string>
    <string name="tutorial_000_text">Search through hundreds of thousands of recipes using advanced filtering and ranking.</string>


    <!---->

    <!-- About Fragment -->

    <string name="about_001">\nThis app was developed for the unit Software Engineering Laboratory (2016.2) which is part of
    the course Computer Science at Universidade Federal de Campina Grande (UFCG).\n</string>
    <string name="about_002">There are below some information about the people involved:\n</string>
    <string name="about_003">Professor:\n</string>
    <string name="about_003.1">Gustavo Soares\n</string>
    <string name="about_004">Students:\n</string>
    <string name="about_005">Caynan Victor Landim Sousa\nJair Guedes Ferreira Neto\nLuiza Carvalho Silveira\n
    Martha Michelly Galvão Menezes\nRafaelle Amorim Monteiro Xavier\nSamir Silva de Medeiros</string>

    <!---->


    <string name="tutorial_text_001">\nIn the <b>\'Sideview menu\'</b> you can see the following menu items: Select Ingredients, Favorites, Tutorial and About.</string>
    <string name="tutorial_text_002">In the <b>\'Select Ingredients\'</b> menu item you can add ingredients should/must be contained in the recipe. Add an ingredient per line. There are three filter types: recipe type, cuisine and diet. You can use them to search for specific recipes.</string>
    <string name="tutorial_text_003">In the <b>\'Select Recipe Type\'</b> item you can select types of the recipes. The type of the recipes. One of the following: main course, side dish, dessert, appetizer, salad, bread, breakfast, soup, beverage, sauce, or drink.</string>
    <string name="tutorial_text_004">In the <b>\'Select Cuisine\'</b> item you can select the cuisine(s) of the recipes. One or more of the following: african, chinese, japanese, korean, vietnamese, thai, indian, british, irish, french, italian, mexican, spanish, middle eastern, jewish, american, cajun, southern, greek, german, nordic, eastern european, caribbean, or latin american.</string>
    <string name="tutorial_text_005">In the <b>\'Select Diet\'</b> item you can choose the diet to which the recipes must be compliant. Possible values are: pescetarian, lacto vegetarian, ovo vegetarian, vegan, paleo, primal, and vegetarian.</string>
    <string name="tutorial_text_006">Once you have selected all the filters, click on the <b>\'Search\'</b> button to search the recipes.</string>
    <string name="tutorial_text_007">After that, we will receive some recipes containing the desired ingredients according to the chosen filters.</string>
    <string name="tutorial_text_008">In the <b>\'Result\'</b> screen click on some recipe to see its details: description, ingredients and preparation.</string>
    <string name="tutorial_text_009"><b>Description</b></string>
    <string name="tutorial_text_010"><b>Ingredients</b></string>
    <string name="tutorial_text_011"><b>Preparation</b></string>



    <string name="tutorial_text_003x">In the <b>\'Select Ingredients\'</b> menu item you can add ingredients should/must be contained in the recipe. Add an ingredient per line. If you want select all filters you must click on <b>\'Check All\'</b> button. To clear the selected filter you can uncheck one by one or click on <b>\'Uncheck All\'</b> button. Once you have selected all the filters, click on the <b>\'Next\'</b> button to select the ingredients.</string>
    <string name="tutorial_text_001x"></string>

    <string name="tutorial_menu_text002">\nIn the <b>\'Sideview menu\'</b> you can choose which types of recipes you want to consult: main course, side dish, dessert, appetizer, salad, bread, breakfast, soup, beverage, sauce, or drink.
    </string>
    <string name="select_diets">Select diets</string>
    <string name="select_cuisines">Select cuisines</string>
    <string name="select_recipe_type">Select recipe types</string>
    <!---->


</resources>
